# htmd

./: .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
.github/workflows/: release.yml  test.yml
lib/: htmd.ex
lib/htmd/: convert_options.ex  native.ex
native/htmd/: Cargo.toml  README.md
native/htmd/src/: lib.rs
native/htmd_nif/: Cargo.toml
native/htmd_nif/.cargo/: config.toml
native/htmd_nif/src/: lib.rs
scripts/: download-checksum.sh
test/: htmd_test.exs
