[package]
name = "htmd_nif"
version = "0.1.0"
authors = []
edition = "2024"

[lib]
name = "htmd_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
htmd = "0.3.0"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
